Add more null annotatons (#260)
Adds null annotations to:

* Default UI
* Basic UI
* HomeBuilder
* REST Docs
* Tiles

Signed-off-by: Wouter Born <github@maindrain.net>